# Project-Flow

./: App.tsx  README.md  i18n.ts  index.html  metadata.json  package.json  types.ts  vite.config.ts
.claude/: settings.local.json
components/: AIPlannerModal.tsx  BackupHistoryModal.tsx  CompletedTimelineModal.tsx  DailyTimelinePanel.tsx  LanguageSwitcher.tsx  MoodTrackerModal.tsx  NewProjectModal.tsx  TaskHeatmap.tsx  TimeChart.tsx  Timeline.tsx  WishlistModal.tsx  WorkLogCalendarModal.tsx  WorkSessionModal.tsx
locales/: en.json  zh.json
services/: geminiService.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: WishlistModal.tsx
